# fontys_lets_move_it

./: README.md
fontys_lets_move_it/: CMakeLists.txt  package.xml
lmi_reference_point_based_data_transformer/: CMakeLists.txt  package.xml
lmi_reference_point_based_data_transformer/launch/: data_transformer.launch  data_transformer_prefix.launch
lmi_reference_point_based_data_transformer/scripts/: data_transformer.py
lmi_reference_point_based_data_transformer/srv/: SetRefPoint.srv
lmi_reference_point_tester/: CMakeLists.txt  package.xml
lmi_reference_point_tester/launch/: ref_point_tester.launch  ref_point_tester_prefix.launch
lmi_reference_point_tester/scripts/: lmi_reference_point_tester_service.py
turtlebot_fleet_bringup/: CMakeLists.txt  package.xml
turtlebot_fleet_bringup/launch/: 3dsensor.launch  3dsensor_prefix.launch  bringup_3dsensor.launch  bringup_minimal_ns.launch  minimal.launch  minimal_prefix.launch
turtlebot_fleet_bringup/launch/includes/: mobile_base.launch.xml
turtlebot_fleet_bringup/launch/includes/3dsensor/: astra.launch.xml
turtlebot_fleet_bringup/launch/includes/kobuki/: mobile_base.launch.xml
turtlebot_fleet_nav_launch/: CMakeLists.txt  package.xml
turtlebot_fleet_nav_launch/launch/: amcl_move_base.launch  amcl_move_base_prefix.launch  gmapping_move_base.launch  gmapping_move_base_prefix.launch  map_server.launch  map_server_prefix.launch
turtlebot_fleet_nav_launch/rviz/: three_robots_example.rviz  three_robots_example_gmapping.rviz  three_robots_example_with_ref.rviz
(+3 files in other folders)
