<?xml version="1.0"?>
<package>
  <name>turtlebot_ns_launch</name>
  <version>0.0.0</version>
  <description>The turtlebot_ns_launch package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kris@todo.todo">kris</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/turtlebot_ns</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>turtlebot_apps</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_teleop</run_depend>
  <run_depend>turtlebot_viz</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage/> 
  </export>
</package>
